[package]
name = "chapter-5"
version = "0.1.0"
authors = ["asSqr <ryo.yossy@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.3"
askama = "0.10.5"
thiserror = "1.0.24"
rusqlite = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
libsqlite3-sys = "0.23.0"
